fix grey button gradient on firefox

--- a/stylesheets/signup.css
+++ b/stylesheets/signup.css
@@ -56,7 +56,7 @@
   -webkit-box-shadow:inset 0px 1px 0px 0px #c9c9c9;
   box-shadow:inset 0px 1px 0px 0px #c9c9c9;
   background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8c8c8c), color-stop(1, #666666) );
-  background:-moz-linear-gradient( center top, #7a7a7a 5%, #c81c2b 100% );
+  background:-moz-linear-gradient( center top, #7a7a7a 5%, #c8c8c8 100% );
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dedede', endColorstr='#c6c6c6');
   background-color:#8c8c8c;
   border:1px solid #9c9c9c;
